8256314: JVM TI GetCurrentContendedMonitor is implemented incorrectly